// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snapshot tests renders correctly with custom render prop 1`] = `
.c9 {
  font-size: 20px;
  font-weight: 400;
  color: rgba(79, 79, 79, 1);
  text-align: center;
}

.c6 {
  font-size: 14px;
  font-weight: 300;
  line-height: 19.18px;
  color: rgba(79, 79, 79, 0.87);
  margin: 5px 0;
}

.c0 {
  display: flex;
  align-items: center;
  width: 100%;
  user-select: none;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  width: 100%;
}

.c2 {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex: 1 1 0;
  min-width: 0;
}

.c3 {
  flex: 0 0 52px;
  max-width: 52px;
}

.c4 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 0px;
  height: 40px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c4:focus {
  outline: none;
}

.c4:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c8 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 3px;
  height: 50px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c8:focus {
  outline: none;
}

.c8:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c12 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 3px;
  height: 40px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  cursor: pointer;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c12:focus {
  outline: none;
}

.c12:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c11 {
  height: 15px;
  font-size: 19px;
  margin: 0px;
  margin-top: 5px;
  padding: 0px;
}

.c10 {
  height: 15px;
  font-size: 10px;
  margin: 0px;
  padding: 0px;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  padding-right: 15px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  color: rgb(112, 117, 122);
}

.c7 {
  margin: 0;
  font-size: 11px;
  text-align: right;
  text-transform: uppercase;
}

@media (max-width: 700px) {
  .c9 {
    font-size: 18px;
  }
}

@media (max-width: 699px) {
  .c3 {
    flex-basis: 32px;
    max-width: 32px;
  }
}

@media (max-width: 699px) {
  .c11 {
    font-size: 12px;
  }
}

@media (max-width: 699px) {
  .c10 {
    font-size: 8px;
  }
}

@media (max-width: 699px) {
  .c5 {
    padding-right: 6px;
  }
}

@media (max-width: 699px) {
  .c7 {
    font-size: 8px;
  }
}

<div
  class="c0"
>
  <div
    aria-label="Booking time slots"
    class="c1"
    role="group"
  >
    <div
      aria-hidden="true"
      class="c2 c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          9 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          10 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          11 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          12 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          1 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          2 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          3 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          4 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          5 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          6 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          7 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          8 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          9 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          10 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          11 pm
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          MON
        </h2>
        <h2
          class="c9 c11"
        >
          1
        </h2>
      </div>
      <button
        aria-label="Available Monday, January 1, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Selected Monday, January 1, 2018 at 12 pm"
        aria-pressed="true"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="selected test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Mon Jan 01 2018
        </div>
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          TUE
        </h2>
        <h2
          class="c9 c11"
        >
          2
        </h2>
      </div>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Selected Tuesday, January 2, 2018 at 1 pm"
        aria-pressed="true"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="selected test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Tue Jan 02 2018
        </div>
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          WED
        </h2>
        <h2
          class="c9 c11"
        >
          3
        </h2>
      </div>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Wed Jan 03 2018
        </div>
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          THU
        </h2>
        <h2
          class="c9 c11"
        >
          4
        </h2>
      </div>
      <button
        aria-label="Available Thursday, January 4, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Thu Jan 04 2018
        </div>
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          FRI
        </h2>
        <h2
          class="c9 c11"
        >
          5
        </h2>
      </div>
      <button
        aria-label="Available Friday, January 5, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="false test-date-cell-renderer"
        >
          Fri Jan 05 2018
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`snapshot tests renders correctly with default render logic 1`] = `
.c9 {
  font-size: 20px;
  font-weight: 400;
  color: rgba(79, 79, 79, 1);
  text-align: center;
}

.c6 {
  font-size: 14px;
  font-weight: 300;
  line-height: 19.18px;
  color: rgba(79, 79, 79, 0.87);
  margin: 5px 0;
}

.c0 {
  display: flex;
  align-items: center;
  width: 100%;
  user-select: none;
}

.c1 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  width: 100%;
}

.c2 {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  flex: 1 1 0;
  min-width: 0;
}

.c3 {
  flex: 0 0 52px;
  max-width: 52px;
}

.c4 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 0px;
  height: 40px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c4:focus {
  outline: none;
}

.c4:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c8 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 3px;
  height: 50px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c8:focus {
  outline: none;
}

.c8:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c12 {
  box-sizing: border-box;
  display: block;
  align-self: stretch;
  width: auto;
  max-width: none;
  min-width: 0;
  max-height: none;
  min-height: 0;
  margin: 3px;
  height: 40px;
  padding: 0;
  border: 0;
  appearance: none;
  background: transparent;
  color: inherit;
  cursor: pointer;
  font: inherit;
  opacity: 1;
  touch-action: none;
}

.c12:focus {
  outline: none;
}

.c12:focus-visible {
  outline: 2px solid rgba(89, 154, 242, 1);
  outline-offset: 2px;
  border-radius: 6px;
}

.c13 {
  width: 100%;
  height: 100%;
  border-radius: 4px;
  transition: background-color 120ms ease,transform 120ms ease;
  background-color: #dbedff;
}

.c13:hover {
  background-color: rgba(162, 198, 248, 1);
}

.c14 {
  width: 100%;
  height: 100%;
  border-radius: 4px;
  transition: background-color 120ms ease,transform 120ms ease;
  background-color: rgba(89, 154, 242, 1);
}

.c14:hover {
  background-color: rgba(162, 198, 248, 1);
}

.c11 {
  height: 15px;
  font-size: 19px;
  margin: 0px;
  margin-top: 5px;
  padding: 0px;
}

.c10 {
  height: 15px;
  font-size: 10px;
  margin: 0px;
  padding: 0px;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 40px;
  padding-right: 15px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  color: rgb(112, 117, 122);
}

.c7 {
  margin: 0;
  font-size: 11px;
  text-align: right;
  text-transform: uppercase;
}

@media (max-width: 700px) {
  .c9 {
    font-size: 18px;
  }
}

@media (max-width: 699px) {
  .c3 {
    flex-basis: 32px;
    max-width: 32px;
  }
}

@media (max-width: 699px) {
  .c11 {
    font-size: 12px;
  }
}

@media (max-width: 699px) {
  .c10 {
    font-size: 8px;
  }
}

@media (max-width: 699px) {
  .c5 {
    padding-right: 6px;
  }
}

@media (max-width: 699px) {
  .c7 {
    font-size: 8px;
  }
}

<div
  class="c0"
>
  <div
    aria-label="Booking time slots"
    class="c1"
    role="group"
  >
    <div
      aria-hidden="true"
      class="c2 c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          9 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          10 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          11 am
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          12 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          1 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          2 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          3 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          4 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          5 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          6 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          7 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          8 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          9 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          10 pm
        </p>
      </div>
      <div
        class="c5"
      >
        <p
          class="c6 c7"
        >
          11 pm
        </p>
      </div>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          MON
        </h2>
        <h2
          class="c9 c11"
        >
          1
        </h2>
      </div>
      <button
        aria-label="Available Monday, January 1, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Selected Monday, January 1, 2018 at 12 pm"
        aria-pressed="true"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c14"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Monday, January 1, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          TUE
        </h2>
        <h2
          class="c9 c11"
        >
          2
        </h2>
      </div>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Selected Tuesday, January 2, 2018 at 1 pm"
        aria-pressed="true"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c14"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Tuesday, January 2, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          WED
        </h2>
        <h2
          class="c9 c11"
        >
          3
        </h2>
      </div>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Wednesday, January 3, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          THU
        </h2>
        <h2
          class="c9 c11"
        >
          4
        </h2>
      </div>
      <button
        aria-label="Available Thursday, January 4, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Thursday, January 4, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
    </div>
    <div
      class="c2"
    >
      <div
        aria-hidden="true"
        class="c8"
      >
        <h2
          class="c9 c10"
        >
          FRI
        </h2>
        <h2
          class="c9 c11"
        >
          5
        </h2>
      </div>
      <button
        aria-label="Available Friday, January 5, 2018 at 9 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 10 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 11 am"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 12 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 1 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 2 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 3 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 4 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 5 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 6 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 7 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 8 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 9 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 10 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
      <button
        aria-label="Available Friday, January 5, 2018 at 11 pm"
        aria-pressed="false"
        class="c12 rgdp__grid-cell"
        type="button"
      >
        <div
          class="c13"
        />
      </button>
    </div>
  </div>
</div>
`;
